# HassWS

./: __init__.py  pyproject.toml  setup.cfg
src/HassWS/: __init__.py
